Adding variables, reset

--- a/less/index.less
+++ b/less/index.less
@@ -1,9 +1,14 @@
 // LESS Imports
 
-@import "footer";
-@import "global";
+// Variables and Mixins
+@import "variables";
+@import "mixins";
+
+// General Styles Here
 @import "header";
 @import "home-page";
-@import "mixins";
+@import "footer";
+
+// Components Here
+@import "global";
 @import "reset";
-@import "variables";
