--- a/css/index.css
+++ b/css/index.css
@@ -1,128 +1,59 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
 html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
+body {
+  font-family: 'Open Sans', sans-serif;
+}
 h1,
-h2,
+h2 {
+  font-family: 'Berkshire Swash', cursive;
+}
 h3,
 h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+h5 {
+  font-family: 'Inknut Antiqua', serif;
 }
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
+h1 {
+  font-size: 4rem;
 }
-body {
-  line-height: 1;
+h2 {
+  font-size: 3.2rem;
+  padding-bottom: 10px;
 }
-ol,
-ul {
-  list-style: none;
+h4 {
+  font-size: 2.5rem;
+  padding-bottom: 10px;
 }
-blockquote,
-q {
-  quotes: none;
+p {
+  line-height: 1.5;
+  font-size: 1.6rem;
+  padding-bottom: 10px;
 }
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
+img {
+  max-width: 100%;
+  height: auto;
 }
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
+header {
+  border: solid red;
+}
+nav .nav-bar {
+  background-color: #1DA1F2;
+  display: flex;
+  justify-content: flex-end;
+  border: solid green;
+  padding: 15px 0;
+}
+nav a {
+  font-size: 1.5rem;
+  font-weight: bolder;
+  color: white;
+  padding: 0 30px;
 }
