--- a/less/global.less
+++ b/less/global.less
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    color: @woodsmoke;
   }
   
   html {
@@ -10,13 +11,14 @@
     font-family: 'Open Sans', sans-serif;
 }
   
-  h1, h2 {
+  h1, h3 {
     font-family: 'Berkshire Swash', cursive;
 }
 
-  h3, h4, h5 {
+  h2, h4, h5 {
     font-family: 'Inknut Antiqua', serif;
   }
+
   
   h1 {
     font-size: 4rem;
@@ -24,18 +26,19 @@
   
   h2 {
     font-size: 3.2rem;
-    padding-bottom: 10px;
+  }
+
+  h3 {
+      font-size: 3rem;
   }
   
   h4 {
-    font-size: 2.5rem;
-    padding-bottom: 10px;
+    font-size: 2rem;
   }
   
   p {
-    line-height: 1.5;
+    // line-height: 1.5;
     font-size: 1.6rem;
-    padding-bottom: 10px;
   }
   
   img {
@@ -44,8 +47,14 @@
   }
   
   .container {
-    // max-width: 800px;
     width: 100%;
     margin: 0 auto;
   }
   
+  .button-a {
+    .default-btn(@fuchsia-blue, @white);
+}
+
+.button-b {
+    .default-btn(@cerise-red, @white);
+}
