--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,28 @@
   background: #ffd66b;
   background: linear-gradient(0deg, #ffd66b 0%, #eeb41b 100%);
 }
+.lblue-gradient {
+  background: #ffffff;
+  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
+}
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.grow-hover:hover {
+  transition: all 0.5s ease 0s;
+  transform: scale(1.3);
+}
+.fade {
+  opacity: 0.5;
+}
+.fade:hover {
+  opacity: 1;
+}
 * {
   box-sizing: border-box;
   color: #14171A;
@@ -24,9 +46,12 @@
 html {
   font-size: 62.5%;
 }
+body {
+  animation: fadein 1s;
+}
 html,
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 h1,
 h3 {
@@ -35,22 +60,22 @@ h3 {
 h2,
 h4,
 h5 {
-  font-family: 'Inknut Antiqua', serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 h1 {
-  font-size: 4rem;
+  font-size: 6rem;
 }
 h2 {
-  font-size: 3.2rem;
+  font-size: 4rem;
 }
 h3 {
-  font-size: 3rem;
+  font-size: 3.5rem;
 }
 h4 {
-  font-size: 2rem;
+  font-size: 2.8rem;
 }
 p {
-  font-size: 1.6rem;
+  font-size: 2rem;
 }
 img {
   max-width: 100%;
@@ -67,9 +92,11 @@ img {
   width: 175px;
   padding: 7px;
   border-radius: 3px;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: bolder;
+  letter-spacing: 0.15rem;
   text-align: center;
+  transition: all 0.5s ease 0s;
 }
 .button-a:hover {
   color: #794BC4;
@@ -84,9 +111,11 @@ img {
   width: 175px;
   padding: 7px;
   border-radius: 3px;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: bolder;
+  letter-spacing: 0.15rem;
   text-align: center;
+  transition: all 0.5s ease 0s;
 }
 .button-b:hover {
   color: #E0245E;
@@ -94,36 +123,43 @@ img {
   border-color: #E0245E;
   cursor: pointer;
 }
-header nav .nav-bar {
+header {
   background: #ffffff;
-  background: linear-gradient(0deg, #ffffff 0%, #1da1f2 100%);
-  background: #000000;
-  background: linear-gradient(0deg, #000000 0%, #1da1f2 100%);
-  background: #93d6ff;
-  background: linear-gradient(0deg, #93d6ff 0%, #1da1f2 100%);
+  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
+}
+header nav .nav-bar {
   display: flex;
   justify-content: flex-end;
   padding: 15px 0;
 }
 header nav a {
-  font-size: 1.5rem;
-  font-weight: bolder;
+  font-size: 1.7rem;
+  font-weight: 900;
+  letter-spacing: 0.25rem;
   color: #14171A;
   padding: 0 30px;
 }
 header nav a:hover {
-  color: white;
+  color: #14171A;
+  text-decoration: none;
+}
+header nav a:hover:hover {
+  transition: all 0.5s ease 0s;
+  transform: scale(1.3);
 }
 header .top-section {
-  background: #ffd66b;
-  background: linear-gradient(0deg, #ffd66b 0%, #eeb41b 100%);
   padding: 100px 25px;
+  padding-left: 25%;
 }
 header .top-section h1 {
   color: #E0245E;
 }
 header .top-section .button-a {
   margin: 25px 0;
+}
+.home-container {
+  background: #ffffff;
+  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
 }
 .home-container .heading-section {
   padding: 5px 0;
@@ -133,47 +169,43 @@ header .top-section .button-a {
   margin: 0 25px;
 }
 .home-container .intro-section {
-  background: #ffffff;
-  background: linear-gradient(0deg, #ffffff 0%, #1da1f2 100%);
-  background: #000000;
-  background: linear-gradient(0deg, #000000 0%, #1da1f2 100%);
-  background: #93d6ff;
-  background: linear-gradient(0deg, #93d6ff 0%, #1da1f2 100%);
   padding-top: 25px;
   padding-bottom: 50px;
 }
 .home-container .intro-section p {
   margin: 0 25px;
 }
-.home-container .projects-container .project-section {
-  padding: 15px 0;
-  background: #ffffff;
-  background: linear-gradient(0deg, #ffffff 0%, #1da1f2 100%);
-  background: #000000;
-  background: linear-gradient(0deg, #000000 0%, #1da1f2 100%);
-  background: #93d6ff;
-  background: linear-gradient(0deg, #93d6ff 0%, #1da1f2 100%);
-}
-.home-container .projects-container .project-section .project-content {
-  margin: 0 25px;
-}
-.home-container .projects-container .project-section .project-content .text-screenshot {
-  padding: 25px 0;
-  display: flex;
-}
-.home-container .projects-container .project-section .project-content .text-screenshot .left-section {
-  margin-right: 50px;
-}
-.home-container .projects-container .project-section .project-content .text-screenshot .screenshot {
-  border: 2px solid black;
-  padding: 100px 175px;
-}
-.home-container .projects-container .project-section .project-content .buttons-section {
+.home-container .buttons-section {
   display: flex;
   justify-content: center;
   padding: 30px;
 }
-.home-container .projects-container .project-section .project-content .buttons-section .button-a,
-.home-container .projects-container .project-section .project-content .buttons-section .button-b {
-  margin: 25px;
+.home-container .buttons-section .button-a,
+.home-container .buttons-section .button-b {
+  margin: 20px;
+}
+.home-container .project-section {
+  background: #ffffff;
+  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
+  padding: 15px 0;
+}
+.home-container .project-section h4,
+.home-container .project-section p {
+  margin: 0 25px;
+}
+.home-container .project-section .project-content .text-screenshot {
+  padding: 25px 0;
+  display: flex;
+}
+.home-container .project-section .project-content .text-screenshot :first-child,
+.home-container .project-section .project-content .text-screenshot :last-child {
+  margin: 0 15px;
+}
+.home-container .project-section .project-content .text-screenshot .screenshot {
+  border: 2px solid black;
+  padding: 100px 175px;
+}
+.home-container .inverted {
+  display: flex;
+  flex-direction: row-reverse;
 }
