--- a/less/global.less
+++ b/less/global.less
@@ -6,9 +6,13 @@
   html {
     font-size: 62.5%;
   }
+
+body {
+    animation: fadein 1s;
+}
   
   html, body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
   
   h1, h3 {
@@ -16,29 +20,29 @@
 }
 
   h2, h4, h5 {
-    font-family: 'Inknut Antiqua', serif;
-  }
+    font-family: 'Source Sans Pro', sans-serif;
+}
 
   
   h1 {
-    font-size: 4rem;
+    font-size: 6rem;
   }
   
   h2 {
-    font-size: 3.2rem;
+    font-size: 4rem;
   }
 
   h3 {
-      font-size: 3rem;
+      font-size: 3.5rem;
   }
   
   h4 {
-    font-size: 2rem;
+    font-size: 2.8rem;
   }
   
   p {
     // line-height: 1.5;
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
   
   img {
@@ -53,6 +57,8 @@
   
   .button-a {
     .default-btn(@fuchsia-blue, @white);
+    // .fade;
+    // .btn-pulse;
 }
 
 .button-b {
