--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,3 +1,9 @@
+// Default margin for sides of webpage
+.side-margin{
+    margin: 0 25px;
+}
+
+// Default button styles
 .default-btn(@background, @color) {
     border: 3px solid @color;
     color: @color;
@@ -5,9 +11,11 @@
     width: 175px;
     padding: 7px;
     border-radius: 3px;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     font-weight: bolder;
+    letter-spacing: .15rem;
     text-align: center;
+    transition: all 0.5s ease 0s;
 
     &:hover {
       color: @background;
@@ -17,9 +25,7 @@
     }
   }
 
-.side-margin{
-    margin: 0 25px;
-}
+// Gradients
 
 .blue-gradient {
     background: rgb(255,255,255);
@@ -40,3 +46,40 @@ background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(29,161,242,1) 100%);
     background: rgb(255,214,107);
 background: linear-gradient(0deg, rgba(255,214,107,1) 0%, rgba(238,180,27,1) 100%);
 }
+
+.lblue-gradient {
+    background: rgb(255,255,255);
+background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(173,215,255,1) 100%);
+}
+
+
+// Animations
+@keyframes fadein {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+
+
+
+.grow-hover {
+    &:hover{
+        transition: all 0.5s ease 0s;
+        transform: scale(1.3);
+    }
+}
+
+.fade {
+    opacity:0.5;
+
+    &:hover {
+        opacity:1;
+    }
+}
+
+
+
