--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,73 @@
 // Website Colors
 
+
+// DEFAULT
 @dodger-blue: #1DA1F2;
+
+// Button Colors
 @cerise-red: #E0245E;
-@buttercup: #EEB41B;
 @fuchsia-blue: #794BC4;
+
+// Sub-Heading Colors
+@buttercup: #EEB41B;
+
+// Generic Colors
 @woodsmoke: #14171A;
 @white: white;
+
+
+
+@dodger-blue: #1DA1F2;
+// @cerise-red: #E0245E;
+@cerise-red: #b13c5a;
+
+@buttercup: #88A146;
+@buttercup: #1DA1F2;
+
+@fuchsia-blue: #193F59;
+@woodsmoke: #14171A;
+@white: white;
+
+
+@dodger-blue: #1DA1F2;
+
+// Page Title 
+
+
+// Button Colors
+@cerise-red: #b13c5a;  // also the page title
+@fuchsia-blue: #1e1420;
+
+// Sub-Heading Colors
+@buttercup: #1DA1F2;
+
+// Generic Colors
+@woodsmoke: #14171A;
+@white: white;
+
+
+
+// DEFAULT
+@dodger-blue: #1DA1F2;
+
+// Button Colors
+@cerise-red: #E0245E;
+@fuchsia-blue: #1DA1F2;
+
+// Sub-Heading Colors
+@buttercup: #EEB41B;
+
+// Generic Colors
+@woodsmoke: #14171A;
+@white: white;
+
+/*
+
+FDFFFE
+193F59
+88A146
+B7A67B
+A8060B
+
+
+*/
