--- a/css/index.css
+++ b/css/index.css
@@ -1,25 +1,26 @@
+/*
+
+FDFFFE
+193F59
+88A146
+B7A67B
+A8060B
+
+
+*/
 .side-margin {
   margin: 0 25px;
 }
-.blue-gradient {
-  background: #ffffff;
-  background: linear-gradient(0deg, #ffffff 0%, #1da1f2 100%);
-}
-.blue-gradient {
-  background: #000000;
-  background: linear-gradient(0deg, #000000 0%, #1da1f2 100%);
-}
-.blue-gradient {
-  background: #93d6ff;
-  background: linear-gradient(0deg, #93d6ff 0%, #1da1f2 100%);
-}
-.yellow-gradient {
-  background: #ffd66b;
-  background: linear-gradient(0deg, #ffd66b 0%, #eeb41b 100%);
-}
-.lblue-gradient {
+.light-blue-gradient {
   background: #ffffff;
   background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
+}
+.light-blue-gradient {
+  background: #ffffff;
+}
+.bottom-blue-gradient {
+  background: #add7ff;
+  background: linear-gradient(0deg, #add7ff 0%, #ffffff 100%);
 }
 @keyframes fadein {
   from {
@@ -47,7 +48,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  animation: fadein 1s;
+  animation: fadein 3s;
 }
 html,
 body {
@@ -88,7 +89,7 @@ img {
 .button-a {
   border: 3px solid white;
   color: white;
-  background: #794BC4;
+  background: #1DA1F2;
   width: 175px;
   padding: 7px;
   border-radius: 3px;
@@ -99,9 +100,9 @@ img {
   transition: all 0.5s ease 0s;
 }
 .button-a:hover {
-  color: #794BC4;
+  color: #1DA1F2;
   background: white;
-  border-color: #794BC4;
+  border-color: #1DA1F2;
   cursor: pointer;
 }
 .button-b {
@@ -123,29 +124,29 @@ img {
   border-color: #E0245E;
   cursor: pointer;
 }
-header {
-  background: #ffffff;
-  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
-}
-header nav .nav-bar {
+nav .nav-bar {
   display: flex;
   justify-content: flex-end;
   padding: 15px 0;
 }
-header nav a {
+nav a {
   font-size: 1.7rem;
   font-weight: 900;
   letter-spacing: 0.25rem;
   color: #14171A;
   padding: 0 30px;
 }
-header nav a:hover {
+nav a:hover {
   color: #14171A;
   text-decoration: none;
 }
-header nav a:hover:hover {
+nav a:hover:hover {
   transition: all 0.5s ease 0s;
   transform: scale(1.3);
+}
+header {
+  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
+  background: #ffffff;
 }
 header .top-section {
   padding: 100px 25px;
@@ -157,10 +158,6 @@ header .top-section h1 {
 header .top-section .button-a {
   margin: 25px 0;
 }
-.home-container {
-  background: #ffffff;
-  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
-}
 .home-container .heading-section {
   padding: 5px 0;
   background-color: #EEB41B;
@@ -169,6 +166,8 @@ header .top-section .button-a {
   margin: 0 25px;
 }
 .home-container .intro-section {
+  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
+  background: #ffffff;
   padding-top: 25px;
   padding-bottom: 50px;
 }
@@ -185,27 +184,39 @@ header .top-section .button-a {
   margin: 20px;
 }
 .home-container .project-section {
-  background: #ffffff;
   background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
-  padding: 15px 0;
-}
-.home-container .project-section h4,
-.home-container .project-section p {
-  margin: 0 25px;
+  background: #ffffff;
+  padding: 40px 0;
 }
 .home-container .project-section .project-content .text-screenshot {
-  padding: 25px 0;
+  margin: 25px;
   display: flex;
+  align-items: center;
 }
-.home-container .project-section .project-content .text-screenshot :first-child,
-.home-container .project-section .project-content .text-screenshot :last-child {
-  margin: 0 15px;
+.home-container .project-section .project-content .text-screenshot .left-section {
+  margin: 0 25px;
 }
 .home-container .project-section .project-content .text-screenshot .screenshot {
   border: 2px solid black;
-  padding: 100px 175px;
+  padding: 125px 225px;
 }
 .home-container .inverted {
   display: flex;
   flex-direction: row-reverse;
+}
+.grow a:hover:hover {
+  transition: all 0.5s ease 0s;
+  transform: scale(1.3);
+}
+.bottom-container .theres-more {
+  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
+  background: #ffffff;
+}
+.bottom-container a:hover {
+  transition: all 0.5s ease 0s;
+  transform: scale(1.3);
+}
+.bottom-container a:hover:hover {
+  transition: all 0.5s ease 0s;
+  transform: scale(1.3);
 }
