--- a/less/global.less
+++ b/less/global.less
@@ -8,7 +8,7 @@
   }
 
 body {
-    animation: fadein 1s;
+    animation: fadein 3s;
 }
   
   html, body {
@@ -23,7 +23,6 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-  
   h1 {
     font-size: 6rem;
   }
@@ -41,7 +40,6 @@ body {
   }
   
   p {
-    // line-height: 1.5;
     font-size: 2rem;
   }
   
@@ -55,12 +53,32 @@ body {
     margin: 0 auto;
   }
   
-  .button-a {
+.button-a {
     .default-btn(@fuchsia-blue, @white);
-    // .fade;
-    // .btn-pulse;
 }
 
 .button-b {
     .default-btn(@cerise-red, @white);
+}
+
+nav {
+    .nav-bar {
+        display: flex;
+        justify-content: flex-end;
+        padding: 15px 0;
+    }
+
+    a {
+        font-size: 1.7rem;
+        font-weight: 900;
+        letter-spacing: .25rem;
+        color: @woodsmoke;
+        padding: 0 30px;
+
+        &:hover {
+            .grow-hover;
+            color: @woodsmoke;
+            text-decoration: none;
+        }
+    }
 }
