--- a/less/header.less
+++ b/less/header.less
@@ -1,34 +1,29 @@
 header {
-    .lblue-gradient;
+    .light-blue-gradient;
 
-    nav {
-        .nav-bar {
-            // .blue-gradient;
-
-            display: flex;
-            justify-content: flex-end;
-            // border: solid green;
-            padding: 15px 0;
-        }
+    // nav {
+    //     .nav-bar {
+    //         display: flex;
+    //         justify-content: flex-end;
+    //         padding: 15px 0;
+    //     }
     
-        a {
-            font-size: 1.7rem;
-            font-weight: 900;
-            letter-spacing: .25rem;
-            color: @woodsmoke;
-            padding: 0 30px;
+    //     a {
+    //         font-size: 1.7rem;
+    //         font-weight: 900;
+    //         letter-spacing: .25rem;
+    //         color: @woodsmoke;
+    //         padding: 0 30px;
 
-            &:hover {
-                .grow-hover;
-                color: @woodsmoke;
-                text-decoration: none;
-            }
-        }
-    }
+    //         &:hover {
+    //             .grow-hover;
+    //             color: @woodsmoke;
+    //             text-decoration: none;
+    //         }
+    //     }
+    // }
     
     .top-section {
-        // .yellow-gradient;
-        
         padding: 100px 25px;
         padding-left: 25%;
         h1 {
