--- a/less/mixins.less
+++ b/less/mixins.less
@@ -27,29 +27,39 @@
 
 // Gradients
 
-.blue-gradient {
+// .blue-gradient {
+//     background: rgb(255,255,255);
+//     background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(29,161,242,1) 100%);
+// }
+
+// .blue-gradient {
+//     background: rgb(0,0,0);
+//     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(29,161,242,1) 100%);
+// }
+
+// .blue-gradient {
+//     background: rgb(147,214,255);
+//     background: linear-gradient(0deg, rgba(147,214,255,1) 0%, rgba(29,161,242,1) 100%);
+// }
+
+// .yellow-gradient {
+//     background: rgb(255,214,107);
+//     background: linear-gradient(0deg, rgba(255,214,107,1) 0%, rgba(238,180,27,1) 100%);
+// }
+
+.light-blue-gradient {
     background: rgb(255,255,255);
-background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(29,161,242,1) 100%);
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(173,215,255,1) 100%);
 }
 
-.blue-gradient {
-    background: rgb(0,0,0);
-background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(29,161,242,1) 100%);
-}
-
-.blue-gradient {
-    background: rgb(147,214,255);
-    background: linear-gradient(0deg, rgba(147,214,255,1) 0%, rgba(29,161,242,1) 100%);
-}
-
-.yellow-gradient {
-    background: rgb(255,214,107);
-background: linear-gradient(0deg, rgba(255,214,107,1) 0%, rgba(238,180,27,1) 100%);
-}
-
-.lblue-gradient {
+.light-blue-gradient {
     background: rgb(255,255,255);
-background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(173,215,255,1) 100%);
+    // background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(173,215,255,1) 100%);
+}
+
+.bottom-blue-gradient {
+    background: rgb(173,215,255);
+    background: linear-gradient(0deg, rgba(173,215,255,1) 0%, rgba(255,255,255,1) 100%);
 }
 
 
@@ -62,9 +72,6 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(173,215,255,1) 10
       opacity: 1;
     }
   }
-  
-
-
 
 .grow-hover {
     &:hover{
