Cleaning up code

--- a/less/header.less
+++ b/less/header.less
@@ -1,27 +1,10 @@
 header {
-    .light-blue-gradient;
 
-    // nav {
-    //     .nav-bar {
-    //         display: flex;
-    //         justify-content: flex-end;
-    //         padding: 15px 0;
-    //     }
-    
-    //     a {
-    //         font-size: 1.7rem;
-    //         font-weight: 900;
-    //         letter-spacing: .25rem;
-    //         color: @woodsmoke;
-    //         padding: 0 30px;
-
-    //         &:hover {
-    //             .grow-hover;
-    //             color: @woodsmoke;
-    //             text-decoration: none;
-    //         }
-    //     }
-    // }
+    nav {
+        a {
+            .default-nav-styles;
+        }
+    }
     
     .top-section {
         padding: 100px 25px;
