--- a/css/index.css
+++ b/css/index.css
@@ -11,17 +11,6 @@ A8060B
 .side-margin {
   margin: 0 25px;
 }
-.light-blue-gradient {
-  background: #ffffff;
-  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
-}
-.light-blue-gradient {
-  background: #ffffff;
-}
-.bottom-blue-gradient {
-  background: #add7ff;
-  background: linear-gradient(0deg, #add7ff 0%, #ffffff 100%);
-}
 @keyframes fadein {
   from {
     opacity: 0;
@@ -39,6 +28,21 @@ A8060B
 }
 .fade:hover {
   opacity: 1;
+}
+.default-nav-styles a {
+  border: solid red;
+  font-size: 1.7rem;
+  font-weight: 900;
+  letter-spacing: 0.25rem;
+  color: #14171A;
+  padding: 0 30px;
+}
+.default-nav-styles a:hover {
+  text-decoration: none;
+}
+.default-nav-styles a:hover:hover {
+  transition: all 0.5s ease 0s;
+  transform: scale(1.3);
 }
 * {
   box-sizing: border-box;
@@ -124,29 +128,20 @@ img {
   border-color: #E0245E;
   cursor: pointer;
 }
-nav .nav-bar {
-  display: flex;
-  justify-content: flex-end;
-  padding: 15px 0;
-}
-nav a {
+header nav a a {
+  border: solid red;
   font-size: 1.7rem;
   font-weight: 900;
   letter-spacing: 0.25rem;
   color: #14171A;
   padding: 0 30px;
 }
-nav a:hover {
-  color: #14171A;
+header nav a a:hover {
   text-decoration: none;
 }
-nav a:hover:hover {
+header nav a a:hover:hover {
   transition: all 0.5s ease 0s;
   transform: scale(1.3);
-}
-header {
-  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
-  background: #ffffff;
 }
 header .top-section {
   padding: 100px 25px;
@@ -166,8 +161,6 @@ header .top-section .button-a {
   margin: 0 25px;
 }
 .home-container .intro-section {
-  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
-  background: #ffffff;
   padding-top: 25px;
   padding-bottom: 50px;
 }
@@ -184,8 +177,6 @@ header .top-section .button-a {
   margin: 20px;
 }
 .home-container .project-section {
-  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
-  background: #ffffff;
   padding: 40px 0;
 }
 .home-container .project-section .project-content .text-screenshot {
@@ -204,19 +195,24 @@ header .top-section .button-a {
   display: flex;
   flex-direction: row-reverse;
 }
-.grow a:hover:hover {
+.bottom-container {
+  border: solid red;
+}
+footer a a {
+  border: solid red;
+  font-size: 1.7rem;
+  font-weight: 900;
+  letter-spacing: 0.25rem;
+  color: #14171A;
+  padding: 0 30px;
+}
+footer a a:hover {
+  text-decoration: none;
+}
+footer a a:hover:hover {
   transition: all 0.5s ease 0s;
   transform: scale(1.3);
 }
-.bottom-container .theres-more {
-  background: linear-gradient(0deg, #ffffff 0%, #add7ff 100%);
-  background: #ffffff;
-}
-.bottom-container a:hover {
-  transition: all 0.5s ease 0s;
-  transform: scale(1.3);
-}
-.bottom-container a:hover:hover {
-  transition: all 0.5s ease 0s;
-  transform: scale(1.3);
+footer a:hover {
+  background-color: black;
 }
