--- a/less/footer.less
+++ b/less/footer.less
@@ -1,47 +1,17 @@
 .bottom-container {
-    .theres-more {
-        .light-blue-gradient;
-    }
+    border: solid red;
+}
 
-    // a:hover {
-    //     .grow-hover;
-    //     // background-color: red;
-    // }
+footer {
 
     a {
-        .grow-hover;
+        .default-nav-styles;
     }
 
-    a {
-        &:hover {
-            .grow-hover;
+    a:hover {
+        background-color: black;
+        // .grow-hover;
 
-        }
     }
 }
 
-// footer {
-//     nav {
-//         .footer-bar {
-//             display: flex;
-//             justify-content: flex-end;
-//             // border: solid green;
-//             padding: 15px 0;
-//         }
-    
-//         a {
-//             font-size: 1.7rem;
-//             font-weight: 900;
-//             letter-spacing: .25rem;
-//             color: @woodsmoke;
-//             padding: 0 30px;
-
-//             &:hover {
-//                 // border: solid red;
-//                 .grow-hover;
-//                 color: @woodsmoke;
-//                 text-decoration: none;
-//             }
-//         }
-//     }
-// }
