Cleaned up HTML, updating styles

--- a/less/header.less
+++ b/less/header.less
@@ -1,19 +1,63 @@
-header {
+.top-container {
+	padding-left: 25%;
+	animation: fadein 5s;
+	margin: 125px 0;
 
-    nav {
-        a {
-            .default-nav-styles;
-        }
-    }
-    
-    .top-section {
-        padding: 100px 25px;
-        padding-left: 25%;
-        h1 {
-            color: @cerise-red;
-        }
-        .button-a {
-            margin: 25px 0;
-        }
-    }
+	h1 {
+		color: @cerise-red;
+	}
+	.button-a {
+		margin: 25px 0;
+	}
+}
+
+// NAV STYLES
+nav {
+	padding: 30px;
+
+	a {
+		font-size: 1.5rem;
+		font-weight: 900;
+		color: @woodsmoke;
+		text-decoration: none;
+		margin: 0 30px;
+
+		&:hover {
+			.grow;
+		}
+	}
+}
+
+.nav-bar {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.footer-bar {
+	margin: 60px 0 0 0;
+	padding: 1px 0;
+	background-color: @buttercup;
+
+	nav {
+		display: flex;
+		justify-content: center;
+	}
+}
+
+.social-links {
+	display: flex;
+	justify-content: center;
+	margin: 25px 0;
+
+	a {
+		font-size: 1.5rem;
+		font-weight: 900;
+		color: @woodsmoke;
+		text-decoration: none;
+		margin: 0 30px;
+
+		&:hover {
+			.grow;
+		}
+	}
 }
