--- a/less/index.less
+++ b/less/index.less
@@ -1,15 +1,14 @@
 // LESS Imports
 
 // Variables and Mixins
-@import "variables";
-@import "mixins";
-
-// Components Here
-@import "global";
-@import "reset";
+@import 'variables';
+@import 'mixins';
 
 // General Styles Here
-@import "header";
-@import "home-page";
-@import "footer";
+@import 'header';
+@import 'home-page';
+@import 'footer';
 
+// Components Here
+@import 'global';
+@import 'reset';
