--- a/less/variables.less
+++ b/less/variables.less
@@ -1,64 +1,57 @@
 // Website Colors
 
+// // DEFAULT
+// @dodger-blue: #1DA1F2;
 
-// DEFAULT
-@dodger-blue: #1DA1F2;
-
-// Button Colors
-@cerise-red: #E0245E;
-@fuchsia-blue: #794BC4;
-
-// Sub-Heading Colors
-@buttercup: #EEB41B;
-
-// Generic Colors
-@woodsmoke: #14171A;
-@white: white;
-
-
-
-@dodger-blue: #1DA1F2;
+// // Button Colors
 // @cerise-red: #E0245E;
-@cerise-red: #b13c5a;
+// @fuchsia-blue: #794BC4;
 
-@buttercup: #88A146;
-@buttercup: #1DA1F2;
+// // Sub-Heading Colors
+// @buttercup: #EEB41B;
 
-@fuchsia-blue: #193F59;
-@woodsmoke: #14171A;
-@white: white;
+// // Generic Colors
+// @woodsmoke: #14171A;
+// @white: white;
 
+// @dodger-blue: #1DA1F2;
+// // @cerise-red: #E0245E;
+// @cerise-red: #b13c5a;
 
-@dodger-blue: #1DA1F2;
+// @buttercup: #88A146;
+// @buttercup: #1DA1F2;
 
-// Page Title 
+// @fuchsia-blue: #193F59;
+// @woodsmoke: #14171A;
+// @white: white;
 
+// @dodger-blue: #1DA1F2;
 
-// Button Colors
-@cerise-red: #b13c5a;  // also the page title
-@fuchsia-blue: #1e1420;
+// // Page Title
 
-// Sub-Heading Colors
-@buttercup: #1DA1F2;
+// // Button Colors
+// @cerise-red: #b13c5a;  // also the page title
+// @fuchsia-blue: #1e1420;
 
-// Generic Colors
-@woodsmoke: #14171A;
-@white: white;
+// // Sub-Heading Colors
+// @buttercup: #1DA1F2;
 
-
+// // Generic Colors
+// @woodsmoke: #14171A;
+// @white: white;
 
 // DEFAULT
-@dodger-blue: #1DA1F2;
+@dodger-blue: #1da1f2;
 
 // Button Colors
-@cerise-red: #E0245E;
-@fuchsia-blue: #1DA1F2;
+@cerise-red: #e0245e;
+@fuchsia-blue: #1da1f2;
 
 // Sub-Heading Colors
-@buttercup: #EEB41B;
+@buttercup: #eeb41b;
 
 // Generic Colors
-@woodsmoke: #14171A;
+@woodsmoke: #14171a;
 @white: white;
 
 /*
@@ -71,3 +64,31 @@ A8060B
 
 
 */
+
+//DEBUGGING:
+
+// .home-content {
+// 	.heading-section {
+// 		border: solid orange;
+// 	}
+
+// 	.projects {
+// 		border: solid blue;
+
+// 		// .project-section {
+// 		// 	border: solid red;
+// 		// }
+
+// 		.project-container {
+// 			border: solid hotpink;
+// 		}
+
+// 		.text-screenshot {
+// 			border: solid blueviolet;
+
+// 			.project-text {
+// 				border: solid yellowgreen;
+// 			}
+// 		}
+// 	}
+// }
