--- a/less/global.less
+++ b/less/global.less
@@ -1,62 +1,67 @@
 * {
-    box-sizing: border-box;
-    color: @woodsmoke;
-  }
-  
-  html {
-    font-size: 62.5%;
-  }
+	box-sizing: border-box;
+	color: @woodsmoke;
+}
+
+html {
+	font-size: 62.5%;
+}
 
 body {
-    animation: fadein 3s;
-}
-  
-  html, body {
-    font-family: 'Source Sans Pro', sans-serif;
-}
-  
-  h1, h3 {
-    font-family: 'Berkshire Swash', cursive;
+	animation: fadein 0.5s;
 }
 
-  h2, h4, h5 {
-    font-family: 'Source Sans Pro', sans-serif;
+html,
+body {
+	font-family: 'Nunito', sans-serif;
 }
 
-  h1 {
-    font-size: 6rem;
-  }
-  
-  h2 {
-    font-size: 4rem;
-  }
+h1,
+h3 {
+	font-family: 'Berkshire Swash', cursive;
+}
 
-  h3 {
-      font-size: 3.5rem;
-  }
-  
-  h4 {
-    font-size: 2.8rem;
-  }
-  
-  p {
-    font-size: 2rem;
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .container {
-    width: 100%;
-    margin: 0 auto;
-  }
-  
+h2,
+h4,
+h5 {
+	font-family: 'Nunito', sans-serif;
+}
+
+h1 {
+	font-size: 6rem;
+}
+
+h2 {
+	font-size: 4rem;
+	line-height: 1.5rem;
+}
+
+h3 {
+	font-size: 3.5rem;
+}
+
+h4 {
+	font-size: 2.8rem;
+}
+
+p {
+	font-size: 2rem;
+}
+
+// img {
+// 	max-width: 100%;
+// 	height: auto;
+// }
+
+// .container {
+// 	width: 100%;
+// 	margin: 0 auto;
+// }
+
 .button-a {
-    .default-btn(@fuchsia-blue, @white);
+	.default-btn(@fuchsia-blue, @white);
 }
 
 .button-b {
-    .default-btn(@cerise-red, @white);
+	.default-btn(@cerise-red, @white);
 }
