Added skills section

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,6 +7,20 @@
 		}
 	}
 
+	.about {
+		.skills-cols {
+			margin: 25px;
+			display: flex;
+			justify-content: space-evenly;
+		}
+		ul {
+			li {
+				font-size: 1.7rem;
+				margin: 10px;
+			}
+		}
+	}
+
 	.text-section {
 		padding-top: 25px;
 		padding-bottom: 50px;
