--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ A8060B
 }
 .grow {
   transition: all 0.5s ease 0s;
-  transform: scale(1.5);
+  transform: scale(1.3);
 }
 .fade {
   opacity: 0.5;
@@ -95,7 +95,7 @@ nav a {
 }
 nav a:hover {
   transition: all 0.5s ease 0s;
-  transform: scale(1.5);
+  transform: scale(1.3);
 }
 .nav-bar {
   display: flex;
@@ -120,11 +120,11 @@ nav a:hover {
   font-weight: 900;
   color: #14171a;
   text-decoration: none;
-  margin: 0 30px;
+  margin: 0 50px;
 }
 .social-links a:hover {
   transition: all 0.5s ease 0s;
-  transform: scale(1.5);
+  transform: scale(1.3);
 }
 .home-content .heading-section {
   padding: 5px 0;
@@ -132,6 +132,15 @@ nav a:hover {
 }
 .home-content .heading-section h3 {
   margin: 0 25px;
+}
+.home-content .about .skills-cols {
+  margin: 25px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.home-content .about ul li {
+  font-size: 1.7rem;
+  margin: 10px;
 }
 .home-content .text-section {
   padding-top: 25px;
