--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,7 @@
 .home-content {
+	.top-container {
+	}
+
 	.heading-section {
 		padding: 5px 0;
 		background-color: @buttercup;
@@ -15,8 +18,11 @@
 		}
 		ul {
 			li {
-				font-size: 1.7rem;
+				font-size: 2rem;
 				margin: 10px;
+				i {
+					padding: 0 7px;
+				}
 			}
 		}
 	}
