--- a/less/variables.less
+++ b/less/variables.less
@@ -40,15 +40,46 @@
 // @woodsmoke: #14171A;
 // @white: white;
 
+// // DEFAULT
+// @dodger-blue: #1da1f2;
+
+// // Button Colors
+// @cerise-red: #e0245e;
+// @fuchsia-blue: #1da1f2;
+
+// // Sub-Heading Colors
+// @buttercup: #eeb41b;
+
+// // Generic Colors
+// @woodsmoke: #14171a;
+// @white: white;
+
 // DEFAULT
-@dodger-blue: #1da1f2;
+
+// Header Color
+@header-color: #e9806e;
 
 // Button Colors
-@cerise-red: #e0245e;
-@fuchsia-blue: #1da1f2;
+@cerise-red: #5d576b;
+@fuchsia-blue: #6cd4ff;
 
 // Sub-Heading Colors
-@buttercup: #eeb41b;
+@buttercup: #e9806e;
+
+// Generic Colors
+@woodsmoke: #14171a;
+@white: white;
+
+// ANOTHER OPTION
+// Header Color
+@header-color: #ca3c25;
+
+// Button Colors
+@cerise-red: #e6aa68;
+@fuchsia-blue: #7fb069; // main button!
+
+// Sub-Heading Colors
+@buttercup: #e6aa68;
 
 // Generic Colors
 @woodsmoke: #14171a;
